# pricing-engine

./: .gitignore  README.md  main.py  pyproject.toml
output/: .gitkeep  sample_quote.json
src/: __init__.py  engine.py  models.py  openai_client.py
src/pricing/: __init__.py  confidence.py  labor_calc.py  material_db.py  vat_rules.py
src/transcript/: __init__.py  analyzer.py
