[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donizo-pricing-engine"
version = "0.1.0"
description = "Smart pricing engine for bathroom renovations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
